WIP Dream World grid feature

--- a/src/main/resources/data/lunatic/worldgen/biome/dream_biome.json
+++ b/src/main/resources/data/lunatic/worldgen/biome/dream_biome.json
@@ -14,5 +14,7 @@
   "spawners": {},
   "spawn_costs": {},
   "carvers": [],
-  "features": []
+  "features": [
+    "lunatic:dream_world_grid"
+  ]
 }
