Include blabber dependency

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
 	id 'fabric-loom' version '1.9-SNAPSHOT'
 	id 'maven-publish'
@@ -12,11 +14,14 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		name = "Ladysnake Mods"
+		url = "https://maven.ladysnake.org/releases"
+	}
+	maven {
+		name = "Nexus Repository Manager"
+		url = "https://oss.sonatype.org/content/repositories/snapshots"
+	}
 }
 
 loom {
@@ -40,6 +45,13 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"
+
+	modImplementation "org.ladysnake:blabber:${blabber_version}"
+	include "org.ladysnake:blabber:${blabber_version}"
+	// Blabber dependencies
+	include "me.lucko:fabric-permissions-api:${fpa_version}"
+	include "org.ladysnake.cardinal-components-api:cardinal-components-base:${cca_version}"
+	include "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cca_version}"
 }
 
 processResources {
@@ -54,7 +66,7 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 21
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+tasks.withType(KotlinCompile).configureEach {
 	kotlinOptions {
 		jvmTarget = 21
 	}
