--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,17 @@ org.gradle.parallel=true
 minecraft_version=1.21.4
 yarn_mappings=1.21.4+build.8
 loader_version=0.16.10
+fabric_version=0.114.2+1.21.4
 fabric_kotlin_version=1.13.0+kotlin.2.1.0
 
 # Mod Properties
-mod_version=0.1
+mod_version=0.2
 maven_group=wdfeer.lunatic
 archives_base_name=lunatic
 
-# Dependencies
-fabric_version=0.114.2+1.21.4
+# Blabber
+blabber_version = 1.7.1
+# Fabric Permissions API
+fpa_version = 0.2-SNAPSHOT
+# Cardinal Components
+cca_version = 6.1.2
