--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,15 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.16.10
 
 # Mod Properties
-mod_version=0.2
+mod_version=0.2.1
 maven_group=wdfeer.lunatic
 archives_base_name=lunatic
 
 # Dependencies
 fabric_version=0.92.3+1.20.1
 fabric_kotlin_version=1.13.0+kotlin.2.1.0
+
+# Blabber
+blabber_version = 1.6.1-mc1.20.1
+fpa_version = 0.2-SNAPSHOT
+cca_version = 5.2.3
