Refactor grid feature

--- a/src/main/resources/data/lunatic/worldgen/biome/dream_biome.json
+++ b/src/main/resources/data/lunatic/worldgen/biome/dream_biome.json
@@ -16,7 +16,7 @@
   "features": [
     [
       {
-        "feature": "lunatic:dream_world_grid",
+        "feature": "lunatic:dream_grid",
         "placement": [
           {
             "type": "minecraft:count",
