--- a/src/main/resources/data/lunatic/worldgen/biome/dream_biome.json
+++ b/src/main/resources/data/lunatic/worldgen/biome/dream_biome.json
@@ -30,6 +30,22 @@
             "type": "minecraft:biome"
           }
         ]
+      },
+      {
+        "feature": "lunatic:dream_dungeon",
+        "placement": [
+          {
+            "type": "minecraft:count",
+            "count": 1
+          },
+          {
+            "type": "minecraft:heightmap",
+            "heightmap": "WORLD_SURFACE"
+          },
+          {
+            "type": "minecraft:biome"
+          }
+        ]
       }
     ]
   ]
