Rename mod to Lunarian Dream

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ loom {
 	splitEnvironmentSourceSets()
 
 	mods {
-		"lunatic" {
+		"lunarian_dream" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
