--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.16.10
 
 # Mod Properties
 mod_version=0.7
-maven_group=wdfeer.lunatic
-archives_base_name=lunatic
+maven_group=wdfeer.lunarian_dream
+archives_base_name=lunarian_dream
 
 # Dependencies
 fabric_version=0.92.3+1.20.1
