Add MentalBreak to loot table

--- a/src/main/resources/data/lunarian_dream/loot_tables/chests/dream_dungeon_treasure.json
+++ b/src/main/resources/data/lunarian_dream/loot_tables/chests/dream_dungeon_treasure.json
@@ -146,6 +146,18 @@
               }
             }
           ]
+        },
+	{
+          "type": "minecraft:item",
+          "name": "minecraft:enchanted_book",
+          "functions": [
+            {
+              "function": "minecraft:set_enchantments",
+              "enchantments": {
+                "lunarian_dream:mental_break": 1
+              }
+            }
+          ]
         }
       ]
     }
