Put NightmareShard in dungeon chest

--- a/src/main/resources/data/lunarian_dream/loot_tables/chests/dream_dungeon_treasure.json
+++ b/src/main/resources/data/lunarian_dream/loot_tables/chests/dream_dungeon_treasure.json
@@ -160,6 +160,21 @@
           ]
         }
       ]
+    },
+    {
+      "rolls": 1,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "lunarian_dream:nightmare_shard",
+          "conditions": [
+            {
+              "condition": "minecraft:random_chance",
+              "chance": 0.4
+            }
+          ]
+        }
+      ]
     }
   ]
 }
