--- a/src/main/resources/data/lunarian_dream/loot_tables/chests/dream_dungeon_treasure.json
+++ b/src/main/resources/data/lunarian_dream/loot_tables/chests/dream_dungeon_treasure.json
@@ -147,7 +147,7 @@
             }
           ]
         },
-	{
+        {
           "type": "minecraft:item",
           "name": "minecraft:enchanted_book",
           "functions": [
@@ -158,6 +158,10 @@
               }
             }
           ]
+        },
+        {
+          "type": "minecraft:item",
+          "name": "lunarian_dream:gravity_controller"
         }
       ]
     },
