--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.16.10
+loader_version=0.16.14
+loom_version=1.10-SNAPSHOT
 
 # Mod Properties
 mod_version=0.8.4
@@ -14,7 +15,7 @@ maven_group=wdfeer.lunarian_dream
 archives_base_name=lunarian_dream
 
 # Dependencies
-fabric_version=0.92.3+1.20.1
+fabric_version=0.92.6+1.20.1
 fabric_kotlin_version=1.13.0+kotlin.2.1.0
 
 # Blabber
